--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import "~normalize.css/normalize";
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +13,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body.ReactModal__Body--open {
+  overflow: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: all 300ms;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+  z-index: 10;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
 }
